[DevTools] do not fall through in target domain in browser only mode

R=dgozman@chromium.org

Bug: chromium:804845
Change-Id: I37ae5ec7e32954bd32cb8e58683e864cd76938c8
Reviewed-on: https://chromium-review.googlesource.com/881462
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Aleksey Kozyatinskiy <kozyatinskiy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531316}
Former-commit-id: 15858fdce57a918f05b17fca4de690f0cc5bc2ad